# geodex

./: .clang-format  .gitignore  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  README.md  bench_algorithms.cpp  bench_collision.cpp  bench_manifold_ops.cpp  bench_metrics.cpp  bench_ompl_interpolation.cpp  bench_retractions.cpp
cmake/: geodexConfig.cmake.in
docs/: Doxyfile.in  conf.py  index.rst  refs.bib  requirements.txt
docs/_static/: custom.css  mermaid-intrinsic-size.js
docs/_static/mathjax/fonts/termes/: chtml.js
docs/_static/mathjax/fonts/termes/chtml/dynamic/: PUA.js  accents-b-i.js  accents.js  arrows.js  calligraphic.js  double-struck.js  fraktur.js  latin-b.js  latin-bi.js  latin-i.js  latin.js  monospace.js  sans-serif.js  script.js  shapes.js  stretchy.js  symbols-b-i.js  symbols.js  variants.js
docs/api/: index.rst
docs/concepts/: architecture.rst  discrete-geodesic-interpolation.rst  index.rst  riemannian-geometry.rst
docs/getting-started/: index.rst
docs/scripts/: vendor_mathjax.py
docs/tutorials/: geodex-basics.rst  index.rst  minimum-energy-planning.rst  se2-planning.rst
examples/: CMakeLists.txt  minimum_energy_grid.cpp  minimum_energy_grid.py  sphere_basics.cpp  sphere_basics.py  sphere_distance.cpp  sphere_distance.py  sphere_interpolation.cpp  sphere_interpolation.py
examples/ompl/: CMakeLists.txt  minimum_energy_planning.cpp  se2_clearance_planning.cpp  se2_planning.cpp  se2_tutorial.cpp  se2_willow_planning.cpp  willow_corridor_dist.txt
include/geodex/: geodex.hpp
include/geodex/algorithm/: distance.hpp  heuristics.hpp  interpolation.hpp  path_smoothing.hpp
include/geodex/collision/: circle_sdf.hpp  collision.hpp  distance_grid.hpp  footprint_grid_checker.hpp  polygon_footprint.hpp  rectangle_sdf.hpp
include/geodex/core/: angle.hpp  concepts.hpp  debug.hpp  distance.hpp  interpolation.hpp  metric.hpp  retraction.hpp  sampler.hpp
include/geodex/integration/ompl/: geodex_informed_sampler.hpp  geodex_optimization_objective.hpp  geodex_path_cache.hpp  geodex_state_space.hpp  validity_checker.hpp
include/geodex/manifold/: configuration_space.hpp  euclidean.hpp  se2.hpp  sphere.hpp  torus.hpp
include/geodex/metrics/: clearance.hpp  constant_spd.hpp  identity.hpp  jacobi.hpp  kinetic_energy.hpp  pullback.hpp  se2_left_invariant.hpp  weighted.hpp
include/geodex/utils/: angle.hpp  math.hpp
python/: CMakeLists.txt
python/geodex/: __init__.py  _geodex_core.pyi
python/src/: bind_algorithms.cpp  bind_collision.cpp  bind_config_space.cpp  bind_euclidean.cpp  bind_metrics.cpp  bind_se2.cpp  bind_sphere.cpp  bind_torus.cpp  geodex_python.cpp
python/src/wrappers/: dynamic_manifold.hpp  py_config_space.hpp  py_euclidean.hpp  py_metrics.hpp  py_se2.hpp  py_sphere.hpp  py_sphere_n.hpp  py_torus.hpp
python/tests/: conftest.py  test_algorithms.py  test_clearance_metric.py  test_collision.py  test_config_space.py  test_euclidean.py  test_metrics.py  test_path_smoothing.py  test_se2.py  test_sphere.py  test_torus.py
scripts/: animate_se2_tutorial.py  crop_and_preprocess.py  draw_se2_diagrams.py  visualize_metric_grid.py  visualize_minimum_energy_planning.py  visualize_se2_tutorial.py
tests/: CMakeLists.txt  test_clearance_metric.cpp  test_collision.cpp  test_concepts.cpp  test_configuration_space.cpp  test_euclidean.cpp  test_geodex_state_space.cpp  test_interpolation.cpp  test_metrics.cpp  test_path_resampling.cpp  test_sampler.cpp  test_se2.cpp  test_sphere.cpp  test_sphere_ndim.cpp  test_torus.cpp
tests/fixtures/: planar_manipulator_metric.hpp
