add_executable(sphere_basics sphere_basics.cpp)
target_link_libraries(sphere_basics PRIVATE geodex)

add_executable(sphere_distance sphere_distance.cpp)
target_link_libraries(sphere_distance PRIVATE geodex)

add_executable(minimum_energy_grid minimum_energy_grid.cpp)
target_link_libraries(minimum_energy_grid PRIVATE geodex)
